logs/general/debug.log
2020-08-23T17:23:15.012Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:23:15.016Z | error | Server Has Started listening on PORT: 5000
2020-08-23T17:27:33.049Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:27:33.051Z | error | Server Has Started listening on PORT: 5000
2020-08-23T17:28:09.475Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:28:22.873Z | info | Admin --> GET /users invoked
<<<<<<< HEAD
2020-08-24T05:37:45.663Z | info | Server Has Started listening on PORT: 5000
2020-08-24T07:25:53.595Z | info | Server Has Started listening on PORT: 5000
=======
2020-08-24T05:17:00.557Z | info | Server Has Started listening on PORT: 5000
2020-08-24T06:51:20.512Z | error | uncaughtException: Unexpected token <<
D:\UCSC\Group-Project-II\server\src\models\mysql.js:12
<<<<<<< HEAD
^^

SyntaxError: Unexpected token <<
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
2020-08-24T07:19:03.829Z | error | uncaughtException: Unexpected token <<
D:\UCSC\Group-Project-II\server\src\models\mysql.js:12
<<<<<<< HEAD
^^

SyntaxError: Unexpected token <<
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
2020-08-24T07:23:08.438Z | info | Server Has Started listening on PORT: 5000
>>>>>>> a9982c81766570c5265611b032e407ae0fc25e38
2020-08-24T07:27:14.993Z | info | Server Has Started listening on PORT: 5000
2020-08-24T07:56:46.377Z | error | uncaughtException: aws is not defined
ReferenceError: aws is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:12:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T07:56:49.480Z | error | uncaughtException: aws is not defined
ReferenceError: aws is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:12:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T07:56:59.394Z | info | Server Has Started listening on PORT: 5000
2020-08-24T08:09:07.092Z | error | uncaughtException: localhost is not defined
ReferenceError: localhost is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:29:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T08:09:13.647Z | error | uncaughtException: localhost is not defined
ReferenceError: localhost is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:29:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T08:10:33.416Z | error | uncaughtException: aws is not defined
ReferenceError: aws is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:37:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T08:10:35.001Z | error | uncaughtException: aws is not defined
ReferenceError: aws is not defined
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\mysql.js:37:1)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (C:\Users\Asus\Desktop\GitHub\ucsc-e-procurement\server\src\models\test_model.js:1:12)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
2020-08-24T08:10:39.701Z | info | Server Has Started listening on PORT: 5000
2020-08-26T13:38:16.450Z | info | Server Has Started listening on PORT: 5000
2020-08-26T20:20:58.964Z | info | Server Has Started listening on PORT: 5000
2020-08-26T20:46:48.879Z | info | Server Has Started listening on PORT: 5000
2020-08-27T15:47:58.014Z | info | Server Has Started listening on PORT: 5000
